core/roboconf-core/src/test/resources/configurations/invalid/duplicate-facet.graph
componentA {
	installer: whatever;
	facets: fA;
}

componentB {
	installer: B;
	facets: fB;
}

facet fA {
	# nothing
}

facet fB {
	# nothing
}

facet fA {
	exports: ip;
}

facet fA {
	# nothing
}
